--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
             </ul>
           </article>
         </section>
-      </main>     
+      </main>
+      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>     
 </body>
 </html>
